@@ -36,6 +36,8 @@ Version 1.7.2
        externals in subfolders. (Stefan)
 - BUG: Issue #133: crash in log dialog when
        "show only affected paths" is active. (Stefan)
+- CHG: Issue #134: Show cached overlays
+       for blocked paths. (Stefan)
 
 Version 1.7.1
 - BUG: Issue #88: Check for modifications on
